--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	url = https://github.com/astropy/astropy-helpers.git
 	path = astropy_helpers
 	branch = refs/heads/v2.0
+[submodule "js9"]
+	path = js9
+	url = https://github.com/ericmandel/js9
