--- a/.travis.yml
+++ b/.travis.yml
@@ -35,11 +35,11 @@ env:
         - PIP_DEPENDENCIES=''
         - EVENT_TYPE='pull_request push'
 
-        
+
         # List other runtime dependencies for the package that are available as
         # conda packages here.
-        - CONDA_DEPENDENCIES=''
-        
+        - CONDA_DEPENDENCIES='cfitsio nodejs'
+
         # List other runtime dependencies for the package that are available as
         # pip packages here.
         - PIP_DEPENDENCIES='socketIO-client git+https://github.com/ericmandel/pyjs9.git#egg=pyjs9'
@@ -91,18 +91,6 @@ matrix:
           env: PYTHON_VERSION=2.7 ASTROPY_VERSION=lts
         - os: linux
           env: ASTROPY_VERSION=lts
-
-        # Try all python versions and Numpy versions. Since we can assume that
-        # the Numpy developers have taken care of testing Numpy with different
-        # versions of Python, we can vary Python and Numpy versions at the same
-        # time.
-
-        - os: linux
-          env: PYTHON_VERSION=2.7 NUMPY_VERSION=1.9
-        - os: linux
-          env: PYTHON_VERSION=3.4 NUMPY_VERSION=1.10
-        - os: linux
-          env: PYTHON_VERSION=3.5 NUMPY_VERSION=1.11
 
         # Try numpy pre-release
         - os: linux
