--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ env:
 
         # List other runtime dependencies for the package that are available as
         # pip packages here.
-        - PIP_DEPENDENCIES='socketIO-client git+https://github.com/ericmandel/pyjs9.git#egg=pyjs9'
+        - PIP_DEPENDENCIES='socketIO-client git+https://github.com/ericmandel/pyjs9.git#egg=pyjs9 git+https://github.com/MMTObservatory/sbigclient#egg=sbigclient'
 
         # Conda packages for affiliated packages are hosted in channel
         # "astropy" while builds for astropy LTS with recent numpy versions
