make changes required to change repos name to reflect it becoming a more generalized codebase

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,19 +37,18 @@ select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
 exclude = extern,sphinx,*parsetab.py
 
 [metadata]
-package_name = matcam
-description = Web interface to Mount Alignment Telescope camera, MATcam
-long_description = 
+package_name = mmtcam
+description = Web interfaces and back-end infrastructure for MMTO camera systems
+long_description =
 author = T. E. Pickering
 author_email = te.pickering@gmail.com
 license = BSD 3-Clause
-url = https://github.com/MMTObservatory/MATcam
+url = https://github.com/MMTObservatory/MMTcam
 edit_on_github = False
-github_project = MMTObservatory/MATcam
+github_project = MMTObservatory/MMTcam
 # version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
 version = 0.0.dev
 
 [entry_points]
 
 # astropy-package-template-example = packagename.example_mod:main
-
