--- a/.travis.yml
+++ b/.travis.yml
@@ -99,13 +99,13 @@ matrix:
 
         # Do a PEP8 test with pycodestyle
         - os: linux
-          env: MAIN_CMD='pycodestyle matcam --count' SETUP_CMD=''
+          env: MAIN_CMD='pycodestyle mmtcam --count' SETUP_CMD=''
 
     allow_failures:
         # Do a PEP8 test with pycodestyle
         # (allow to fail unless your code completely compliant)
         - os: linux
-          env: MAIN_CMD='pycodestyle matcam --count' SETUP_CMD=''
+          env: MAIN_CMD='pycodestyle mmtcam --count' SETUP_CMD=''
 
 install:
 
@@ -138,4 +138,4 @@ script:
 after_success:
     # If coveralls.io is set up for this package, uncomment the line below.
     # The coveragerc file may be customized as needed for your package.
-    # - if [[ $SETUP_CMD == *coverage* ]]; then coveralls --rcfile='matcam/tests/coveragerc'; fi
+    # - if [[ $SETUP_CMD == *coverage* ]]; then coveralls --rcfile='mmtcam/tests/coveragerc'; fi
