--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ env:
 
         # List other runtime dependencies for the package that are available as
         # conda packages here.
-        - CONDA_DEPENDENCIES='cfitsio nodejs tornado'
+        - CONDA_DEPENDENCIES='cfitsio nodejs tornado urllib3'
 
         # List other runtime dependencies for the package that are available as
         # pip packages here.
