--- a/setup.cfg
+++ b/setup.cfg
@@ -1,54 +1,74 @@
-[build_sphinx]
-source-dir = docs
-build-dir = docs/_build
-all_files = 1
-
-[build_docs]
-source-dir = docs
-build-dir = docs/_build
-all_files = 1
-
-[upload_docs]
-upload-dir = docs/_build/html
-show-response = 1
-
-[tool:pytest]
-minversion = 3.0
-norecursedirs = build docs/_build
-doctest_plus = enabled
-addopts = -p no:warnings
-
-[ah_bootstrap]
-auto_use = True
-
-[pycodestyle]
-# E101 - mix of tabs and spaces
-# W191 - use of tabs
-# W291 - trailing whitespace
-# W292 - no newline at end of file
-# W293 - trailing whitespace
-# W391 - blank line at end of file
-# E111 - 4 spaces per indentation level
-# E112 - 4 spaces per indentation level
-# E113 - 4 spaces per indentation level
-# E901 - SyntaxError or IndentationError
-# E902 - IOError
-select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
-exclude = extern,sphinx,*parsetab.py
-
 [metadata]
-package_name = camsrv
-description = Web interfaces and back-end infrastructure for MMTO camera systems
-long_description =
-author = T. E. Pickering
+name = camsrv
+author = T. E. Pickering (MMT Observatory)
 author_email = te.pickering@gmail.com
 license = BSD 3-Clause
-url = https://github.com/MMTObservatory/camsrv
-edit_on_github = False
+license_file = licenses/LICENSE.rst
+url = http://github.com/MMTObservatory/camsrv
+description = Web interfaces and back-end infrastructure for MMTO camera systems
+long_description = file: README.rst
+long_description_content_type = text/x-rst
+edit_on_github = True
 github_project = MMTObservatory/camsrv
-# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
-version = 0.0.dev
 
-[entry_points]
+[options]
+zip_safe = False
+packages = find:
+python_requires = >=3.7
+setup_requires = setuptools_scm
+install_requires =
+    astropy
+    scipy
+    tornado
+    indiclient
 
-# astropy-package-template-example = packagename.example_mod:main
+[options.extras_require]
+all =
+    redis
+test =
+    pytest-astropy
+docs =
+    sphinx-astropy
+
+[options.package_data]
+camsrv = web_resources/*/*
+
+[tool:pytest]
+testpaths = "camsrv" "docs"
+astropy_header = true
+doctest_plus = enabled
+text_file_format = rst
+addopts = --doctest-rst
+
+[coverage:run]
+omit =
+    camsrv/_astropy_init*
+    camsrv/conftest.py
+    camsrv/*setup_package*
+    camsrv/tests/*
+    camsrv/*/tests/*
+    camsrv/extern/*
+    camsrv/version*
+    */camsrv/_astropy_init*
+    */camsrv/conftest.py
+    */camsrv/*setup_package*
+    */camsrv/tests/*
+    */camsrv/*/tests/*
+    */camsrv/extern/*
+    */camsrv/version*
+
+[coverage:report]
+exclude_lines =
+    # Have to re-enable the standard pragma
+    pragma: no cover
+    # Don't complain about packages we have installed
+    except ImportError
+    # Don't complain if tests don't hit assertions
+    raise AssertionError
+    raise NotImplementedError
+    # Don't complain about script hooks
+    def main\(.*\):
+    # Ignore branches that don't pertain to this version of Python
+    pragma: py{ignore_python_version}
+    # Don't complain about IPython completion helper
+    def _ipython_key_completions_
