fix package name in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -54,8 +54,8 @@ extras =
 
 commands =
     pip freeze
-    !cov: pytest --pyargs wfssrv {toxinidir}/docs {posargs}
-    cov: pytest --pyargs wfssrv {toxinidir}/docs --cov wfssrv --cov-config={toxinidir}/setup.cfg {posargs}
+    !cov: pytest --pyargs camsrv {toxinidir}/docs {posargs}
+    cov: pytest --pyargs camsrv {toxinidir}/docs --cov camsrv --cov-config={toxinidir}/setup.cfg {posargs}
     cov: coverage xml -o {toxinidir}/coverage.xml
 
 [testenv:build_docs]
@@ -83,7 +83,7 @@ skip_install = true
 changedir = .
 description = check code style, e.g. with flake8
 deps = flake8
-commands = flake8 wfssrv --count --max-line-length=135
+commands = flake8 camsrv --count --max-line-length=135
 
 [testenv:cov_report]
 changedir = {toxworkdir}/tox_testing
