clean up vestigial files; remove scripts and set up entry points in the relevant files to replace them.

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,16 @@ docs =
     sphinx-astropy
 
 [options.package_data]
-camsrv = web_resources/*/*
+camsrv =
+    web_resources/*/*
+    data/*
+
+[options.entry_points]
+console_scripts =
+    f9wfs = camsrv.f9wfs:main
+    matcam = camsrv.matcam:main
+    ratcam = camsrv.ratcam:main
+    simcam = camsrv.camsrv:main
 
 [tool:pytest]
 testpaths = "camsrv" "docs"
