--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,6 +8,7 @@ recursive-include docs *
 recursive-include licenses *
 recursive-include cextern *
 recursive-include camsrv/web_resources *
+recursive-include camsrv/data *
 
 prune build
 prune docs/_build
