--- a/.github/workflows/camsrv-tests.yml
+++ b/.github/workflows/camsrv-tests.yml
@@ -26,6 +26,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install numpy tox
+    - name: Run INDI server in container
+      run: docker run -d --rm -p 7624:7624 mmtobservatory/indilib_server:latest
     - name: Test with tox
       run: |
         tox -e py3${{ matrix.python-ver }}-${{ matrix.tox-env }}
