add py-saomsg to dependencies in the appropriate places.

--- a/tox.ini
+++ b/tox.ini
@@ -39,6 +39,7 @@ description =
 
 deps =
     git+https://github.com/MMTObservatory/indiclient.git#egg=indiclient
+    git+https://github.com/MMTObservatory/py-saomsg.git#egg=saomsg
     astropylts: astropy==4.0.*
     numpydev: git+https://github.com/numpy/numpy.git#egg=numpy
     astropydev: git+https://github.com/astropy/astropy.git#egg=astropy
