add f5wfs camera interface

--- a/.github/workflows/camsrv-tests.yml
+++ b/.github/workflows/camsrv-tests.yml
@@ -1,4 +1,4 @@
-# GitHub Actions workflow for mmtwfs testing and continuous integration.
+# GitHub Actions workflow for testing and continuous integration.
 #
 # This file performs testing using tox and tox.ini to define and configure the test environments.
 
