--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
 envlist =
-    py{37,38}{,-test}{,-cov}
-    py{37,38}-astropylts
-    py{37,38}-{numpy,astropy}dev
+    py{38,39}{,-test}{,-cov}
+    py{38,39}-astropylts
+    py{38,39}-{numpy,astropy}dev
     build_docs
     linkcheck
     codestyle
@@ -38,7 +38,9 @@ description =
     cov_report: generate HTML coverage report
 
 deps =
+
     git+https://github.com/MMTObservatory/indiclient.git#egg=indiclient
+    git+https://github.com/MMTObservatory/pyINDI.git#egg=pyindi
     git+https://github.com/MMTObservatory/py-saomsg.git#egg=saomsg
     astropylts: astropy==4.0.*
     numpydev: git+https://github.com/numpy/numpy.git#egg=numpy
