--- a/.github/workflows/camsrv-tests.yml
+++ b/.github/workflows/camsrv-tests.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-ver: [7, 8]
+        python-ver: [9]
         tox-env: [cov, astropylts, astropydev]
     steps:
     - uses: actions/checkout@v2
@@ -32,8 +32,8 @@ jobs:
       run: |
         tox -e py3${{ matrix.python-ver }}-${{ matrix.tox-env }}
     - name: Upload coverage to codecov
-      if: matrix.tox-env == 'cov' && matrix.python-ver == '8'
-      uses: codecov/codecov-action@v1
+      if: matrix.tox-env == 'cov' && matrix.python-ver == '9'
+      uses: codecov/codecov-action@v2
       with:
         token: ${{ secrets.CODECOV }}
         file: ./coverage.xml
@@ -47,7 +47,7 @@ jobs:
     - name: Set up Python to test links in docs with sphinx
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
+        python-version: 3.9
     - name: Install base dependencies
       run: |
         python -m pip install --upgrade pip
@@ -81,7 +81,7 @@ jobs:
     - name: Python codestyle check
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
+        python-version: 3.9
     - name: Install base dependencies
       run: |
         python -m pip install --upgrade pip
