--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ camsrv =
 
 [options.entry_points]
 console_scripts =
+    f5wfs = camsrv.f5wfs:main
     f9wfs = camsrv.f9wfs:main
     matcam = camsrv.matcam:main
     ratcam = camsrv.ratcam:main
