--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,8 @@ install_requires =
     astropy
     scipy
     tornado
+    pyindi @ git+https://github.com/MMTObservatory/pyINDI
+    urllib3
 
 [options.extras_require]
 all =
@@ -36,6 +38,7 @@ docs =
 [options.package_data]
 camsrv =
     web_resources/*/*
+    web_resources/bootstrap/*/*
     data/*
 
 [options.entry_points]
