--- a/.github/workflows/camsrv-tests.yml
+++ b/.github/workflows/camsrv-tests.yml
@@ -47,7 +47,7 @@ jobs:
     - name: Set up Python to test links in docs with sphinx
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
+        python-version: 3.9
     - name: Install base dependencies
       run: |
         python -m pip install --upgrade pip
@@ -64,7 +64,7 @@ jobs:
     - name: Set up Python to build docs with sphinx
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
+        python-version: 3.9
     - name: Install base dependencies
       run: |
         python -m pip install --upgrade pip
@@ -81,7 +81,7 @@ jobs:
     - name: Python codestyle check
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
+        python-version: 3.9
     - name: Install base dependencies
       run: |
         python -m pip install --upgrade pip
