--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ isolated_build = true
 usedevelop = True
 
 # Pass through the following environemnt variables which may be needed for the CI
-passenv = HOME WINDIR LC_ALL LC_CTYPE CC CI
+passenv = HOME,WINDIR,LC_ALL,LC_CTYPE,CC,CI
 
 # Run the tests in a temporary directory to make sure that we don't import
 # astropy from the source tree
