--- a/setup.cfg
+++ b/setup.cfg
@@ -20,15 +20,13 @@ install_requires =
     astropy
     scipy
     tornado
-    pyindi @ git+https://github.com/MMTObservatory/pyINDI
     urllib3
+    redis
+    pyindi @ git+https://github.com/MMTObservatory/pyINDI
+    indiclient @ git+https://github.com/MMTObservatory/indiclient
+    saomsg @ git+https://github.com/MMTObservatory/py-saomsg
 
 [options.extras_require]
-all =
-    redis
-    urllib3
-    indiclient
-    saomsg
 test =
     tox
     coverage
