--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,118 @@
-[build-system]
+[project]
+name = "camsrv"
+dynamic = ["version"]
+authors = [
+    { name = "T. E. Pickering", email = "te.pickering@gmail.com"}
+]
+license = {file = "licenses/LICENSE.rst"}
+readme = "README.rst"
+description = "Web interfaces and back-end infrastructure for MMTO camera systems"
+requires-python = ">=3.12"
+dependencies = [
+    "astropy",
+    "scipy",
+    "tornado",
+    "urllib3",
+    "redis",
+    "pyindi@git+https://github.com/MMTObservatory/pyINDI",
+    "indiclient@git+https://github.com/MMTObservatory/indiclient",
+    "saomsg@git+https://github.com/MMTObservatory/py-saomsg",
+]
 
-requires = ["setuptools",
-            "setuptools_scm",
-            "wheel"]
+[project.optional-dependencies]
+test = [
+    "tox",
+    "coverage",
+    "pytest-astropy",
+]
+docs = [
+    "sphinx-astropy",
+]
+
+[project.scripts]
+f5wfs = "camsrv.f5wfs:main"
+f9wfs = "camsrv.f9wfs:main"
+matcam = "camsrv.matcam:main"
+ratcam = "camsrv.ratcam:main"
+simcam = "camsrv.camsrv:main"
+
+[project.urls]
+Repository = "https://github.com/mmtobservatory/camsrv.git"
+Documentation = "https://camsrv.readthedocs.io/"
+
+[tool.setuptools]
+include-package-data = true
+
+[tool.setuptools.package-data]
+camsrv = [
+    "data/*",
+    "web_resources/*/*",
+    "web_resources/bootstrap/*/*",
+]
+
+[tool.setuptools.packages]
+find = {}
+
+[tool.setuptools_scm]
+version_file = "camsrv/version.py"
+
+[build-system]
+requires = [
+    "setuptools",
+    "setuptools_scm",
+]
 
 build-backend = 'setuptools.build_meta'
+
+[tool.pytest.ini_options]
+minversion = 7.0
+testpaths = [
+    "camsrv/test",
+    "docs",
+]
+astropy_header = true
+doctest_plus = "enabled"
+text_file_format = "rst"
+addopts = [
+    "--color=yes",
+    "--doctest-rst",
+]
+xfail_strict = true
+filterwarnings = [
+    "error",
+    "ignore:numpy\\.ufunc size changed:RuntimeWarning",
+    "ignore:numpy\\.ndarray size changed:RuntimeWarning",
+    # Python 3.12 warning from dateutil imported by matplotlib
+    "ignore:.*utcfromtimestamp:DeprecationWarning",
+]
+
+[tool.coverage]
+
+    [tool.coverage.run]
+        omit = [
+            "camsrv/_astropy_init*",
+            "camsrv/conftest.py",
+            "camsrv/tests/*",
+            "camsrv/version*",
+            "*/camsrv/_astropy_init*",
+            "*/camsrv/conftest.py",
+            "*/camsrv/tests/*",
+            "*/camsrv/version*",
+        ]
+
+    [tool.coverage.report]
+        exclude_lines = [
+            # Have to re-enable the standard pragma
+            "pragma: no cover",
+            # Don't complain about packages we have installed
+            "except ImportError",
+            # Don't complain if tests don't hit defensive assertion code:
+            "raise AssertionError",
+            "raise NotImplementedError",
+            # Don't complain about script hooks
+            "'def main(.*):'",
+            # Ignore branches that don't pertain to this version of Python
+            "pragma: py{ignore_python_version}",
+            # Don't complain about IPython completion helper
+            "def _ipython_key_completions_",
+        ]
