fix coverage config still pointing to setup.cfg

--- a/tox.ini
+++ b/tox.ini
@@ -54,7 +54,7 @@ extras =
 commands =
     pip freeze
     !cov: pytest --pyargs camsrv {toxinidir}/docs {posargs}
-    cov: pytest --pyargs camsrv {toxinidir}/docs --cov camsrv --cov-config={toxinidir}/setup.cfg {posargs}
+    cov: pytest --pyargs camsrv {toxinidir}/docs --cov camsrv --cov-config={toxinidir}pyproject.toml {posargs}
     cov: coverage xml -o {toxinidir}/coverage.xml
 
 [testenv:build_docs]
